<resources>
    <string name="app_name">Ligtas Baon Beta</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="budget">Budget</string>
    <string name="location">Current Location</string>
    <string name="or">- or -</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign Up</string>
    <string name="title">Ligtas ~ Baon</string>

    <string-array name="barangay">
        <item>Abella</item>
        <item>Bagumbayan Norte</item>
        <item>Bagumbayan Sur</item>
        <item>Balatas</item>
        <item>Calauag</item>
        <item>Cararayan</item>
        <item>Carolina</item>
        <item>Concepcion Grande</item>
        <item>Concepcion Pequeña</item>
        <item>Dayangdang</item>
        <item>Del Rosario</item>
        <item>Dinaga</item>
        <item>Igualdad</item>
        <item>Lerma</item>
        <item>Liboton</item>
        <item>Mabolo</item>
        <item>Pacol</item>
        <item>Panicuason</item>
        <item>Peñafrancia</item>
        <item>Sabang</item>
        <item>San Felipe</item>
        <item>San Francisco</item>
        <item>San Isidro</item>
        <item>Santa Cruz</item>
        <item>Tabuco</item>
        <item>Tinago</item>
        <item>Triangulo</item>
    </string-array>

    <string name="title_activity_admin">Admin</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="example_domain_com">example@domain.com</string>
    <string name="keep_it_a_secret">minimum of 6 characters</string>
    <string name="create_your_account">Create your account!</string>
    <string name="createaccount">Create Your Account!</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_budget">should be 50+ pesos > </string>
    <string name="hi">Hi!,</string>
    <string name="find">Find Me Some!</string>
    <string name="find_">Find</string>
    <string name="suggest">+ Suggest</string>
    <string name="tell_us">So, tell us what you know!</string>
    <string name="ave_price">Average price</string>
</resources>
