<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="?android:attr/colorFocusedHighlight"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/budget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/budget"
        android:textSize="24sp" />
</LinearLayout>
