<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddResto">

    <EditText
        android:id="@+id/restoNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/avePriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        android:layout_marginTop="45dp"
        android:text="@string/tell_us"
        android:textColor="?attr/editTextColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="?attr/editTextColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/restoNameText"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ave_price"
        android:textColor="?attr/editTextColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/avePriceText"
        app:layout_constraintStart_toStartOf="@+id/avePriceText"
        app:layout_constraintTop_toBottomOf="@+id/restoNameText" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:text="@string/location"
        android:textColor="?attr/editTextColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/barangaySpin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avePriceText" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="209dp"
        android:background="?android:attr/colorFocusedHighlight"
        android:text="@string/suggest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/barangaySpin"
        app:layout_constraintStart_toStartOf="@+id/barangaySpin"
        app:layout_constraintTop_toBottomOf="@+id/barangaySpin" />

    <Spinner
        android:id="@+id/barangaySpin"
        android:layout_width="214dp"
        android:layout_height="0dp"
        android:layout_marginBottom="27dp"
        android:popupBackground="?attr/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/addButton"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

</android.support.constraint.ConstraintLayout>