<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="77dp"
        android:layout_marginEnd="11dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="58dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/hi"
        android:textColor="?attr/editTextColor"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/nameDisplay"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/audiowide"
        android:text="TextView"
        android:textColor="?android:attr/colorActivatedHighlight"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <Spinner
        android:id="@+id/locationSpin"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginBottom="75dp"
        android:layout_marginEnd="47dp"
        android:layout_marginTop="74dp"
        android:popupBackground="?attr/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/findButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/budgetText"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginBottom="66dp"
        android:layout_marginEnd="47dp"
        android:layout_marginTop="67dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="?android:attr/colorFocusedHighlight"
        app:layout_constraintBottom_toBottomOf="@+id/suggestButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="16dp"
        android:text="@string/location"
        android:textColor="?attr/editTextColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toStartOf="@+id/locationSpin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="43dp"
        android:layout_marginEnd="76dp"
        android:layout_marginStart="16dp"
        android:text="@string/budget"
        android:textColor="?attr/editTextColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/findButton"
        app:layout_constraintEnd_toStartOf="@+id/budgetText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ListView
        android:id="@+id/resList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findButton" />

    <Button
        android:id="@+id/findButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="48dp"
        android:background="?android:attr/colorFocusedHighlight"
        android:text="@string/find_"
        app:layout_constraintBottom_toTopOf="@+id/resList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/suggestButton"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/suggestButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="135dp"
        android:text="@string/suggest"
        app:layout_constraintBottom_toTopOf="@+id/resList"
        app:layout_constraintEnd_toStartOf="@+id/findButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/findButton" />
</android.support.constraint.ConstraintLayout>